--- a/manager/lib/manager_web/templates/layout/root.html.heex
+++ b/manager/lib/manager_web/templates/layout/root.html.heex
@@ -14,13 +14,13 @@
       <section class="container">
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
+            <li><%= link "Developers", to: Routes.dev_path(@conn,:index) %> </li>
+            <li><%= link "Assignments", to: Routes.assignment_path(@conn,:index) %></li>
+            <li><%= link "Tasks", to: Routes.task_path(@conn,:index) %></li>
+            <li><%= link "Areas", to: Routes.area_path(@conn,:index) %></li>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
+        <a class="phx-logo">
           <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
         </a>
       </section>
