Added Statuses Link to Top Nav Bar

--- a/manager/lib/manager_web/templates/layout/root.html.heex
+++ b/manager/lib/manager_web/templates/layout/root.html.heex
@@ -18,6 +18,7 @@
             <li><%= link "Assignments", to: Routes.assignment_path(@conn,:index) %></li>
             <li><%= link "Tasks", to: Routes.task_path(@conn,:index) %></li>
             <li><%= link "Areas", to: Routes.area_path(@conn,:index) %></li>
+            <li><%= link "Statuses", to: Routes.status_path(@conn,:index) %></li>
           </ul>
         </nav>
         <a class="phx-logo">
